--- a/desafios/desafio12/estilo/style.css
+++ b/desafios/desafio12/estilo/style.css
@@ -1,11 +1,58 @@
 @charset  'utf-8';
 
-body{
-    background-color: black;
+*{
+    margin: 0px;
+    padding: 0px;
+}
+html, body{
+    min-height: 100vh;
+    background-color: darkgray;
 }
 header{
-    background-color: white;
+    background-color: black;
+    color: white;
+    text-align: center;
 }
-main{
-    background-color: rgb(207, 46, 46);
+header > h1{
+    padding-top: 50px;
+    /**text-transform: uppercase;**/
+    font-variant:small-caps;
+}
+header > p{
+    padding-bottom: 50px;
+}
+header a, footer a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+header a:hover, footer a:hover{
+    text-decoration: underline;
+    
+}
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+section.normal{
+    background-color: white;
+    color: black;
+
+}
+section.imagem{
+    background-color: transparent;
+}
+section.imagem p{
+    background-color: rgba(0, 0, 0, 0.36);
+    width: 400px;
+}
+
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
