--- a/desafios/desafio12/estilo/style.css
+++ b/desafios/desafio12/estilo/style.css
@@ -1,5 +1,16 @@
 @charset  'utf-8';
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+
+
+
+:root{
+    --fonte1: verdana, geneva, tahoma, sans-serif;
+    --fonte2: 'passion one', cursive;
+    --fonte3: 'sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -7,16 +18,19 @@
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 header{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--fonte2);
 }
 header > h1{
     padding-top: 50px;
     /**text-transform: uppercase;**/
     font-variant:small-caps;
+    font-size: 5vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -35,6 +49,11 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3vw;
+}
+section > p{
+    padding-bottom: 2em;
 }
 section.normal{
     background-color: white;
@@ -46,7 +65,9 @@ section.imagem{
 }
 section.imagem p{
     background-color: rgba(0, 0, 0, 0.36);
-    width: 400px;
+    display: inline-block;
+    padding: 8px;
+    
 }
 
 
