--- a/desafios/desafio12/estilo/style.css
+++ b/desafios/desafio12/estilo/style.css
@@ -44,6 +44,11 @@ header a:hover, footer a:hover{
     text-decoration: underline;
     
 }
+main{
+    max-width: 800px;
+    background-color: aliceblue;
+    margin: auto;
+}
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
@@ -62,12 +67,26 @@ section.normal{
 }
 section.imagem{
     background-color: transparent;
+    box-shadow: inset 6px 6px 13px 0px ;
 }
 section.imagem p{
-    background-color: rgba(0, 0, 0, 0.36);
+    background-color: rgba(0, 0, 0, 0.521);
+    color: white;
     display: inline-block;
-    padding: 8px;
-    
+    padding: 8px; 
+    text-shadow: 1px 1px black;  
+}
+section#img01{
+  background-image: url('../imagens/background001.jpg');
+  background-position: right center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 
